admission/ValidatingAdmissionPolicy/policies/apparmor-profile/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-profile-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test apparmor-profile-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/apparmor-profile/ephemeralcontainers/deny-kubectl-debug-custom.yaml
